# TerraSeg

./: .gitignore  README.md  build.sh  pyproject.toml  ruff.toml
OmniLiDAR_scripts/: README.md  dataset_converter__AevaScenes.py  dataset_converter__Argoverse2Lidar.py  dataset_converter__KITTI360.py  dataset_converter__Lyft.py  dataset_converter__ONCE.py  dataset_converter__PandaSet.py  dataset_converter__SemanticKITTI.py  dataset_converter__TruckScenes.py  dataset_converter__ViewOfDelft.py  dataset_converter__WaymoPerception.py  dataset_converter__Zenseact.py  dataset_converter__nuScenes.py  pyproject.toml
PseudoLabeler_scripts/: README.md  pseudolabeler_compute_ablation_study1__base.py  pseudolabeler_compute_ablation_study1__post.py  pseudolabeler_compute_ablation_study1__pre.py  pseudolabeler_compute_ablation_study2.py  pseudolabeler_compute_labels.py  pseudolabeler_loss.py  pseudolabeler_model.py  pyproject.toml
TerraSeg_ros2/: README.md  package.xml  setup.cfg  setup.py
TerraSeg_ros2/config/: terraseg.yaml
TerraSeg_ros2/launch/: terraseg.launch.py
TerraSeg_ros2/terraseg_ros2/: pointcloud_conversion.py  terraseg_node.py
TerraSeg_scripts/: README.md  pyproject.toml  terraseg_dataloading.py  terraseg_loss.py  terraseg_test.py  terraseg_test_ablation_study1.py  terraseg_train.py  terraseg_utils.py
cppConverter/: convertTS.py  infer.cpp
ptv3/: README.md  pyproject.toml
terraseg/: README.md  pyproject.toml
terraseg/src/terraseg/: model.py  norm.py  predictor.py
terraseg_lib/: README.md
terraseg_lib/src/terraseg/: __init__.py  features.py
utils/: pyproject.toml
utils/src/utils/: dataset.py  evaluate.py  splits.py
