[project]
name = "TerraSeg"
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}

[tool.uv.workspace]
members = [
    "utils",
    "OmniLiDAR_scripts",
    "PseudoLabeler_scripts",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

[tool.uv.sources]
torchrobotics = { git = "https://github.com/TedLentsch/torchrobotics.git", rev = "d244a9f82e42fb5f72ecdc8aa8adf786b5fac8be" }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
