[project]
name = "terraseg-workspace"
version = "0.1.0"
authors = [
  { name = "Ted Lentsch" },
  { name = "Santiago Montiel-Marín" },
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "ptv3",
    "terraseg",
]

[tool.uv.workspace]
members = [
    "utils",
    "OmniLiDAR_scripts",
    "PseudoLabeler_scripts",
    "TerraSeg_scripts",
    "ptv3",
    "terraseg_lib",
]

[tool.uv]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'"
]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"

[tool.uv.sources]
torchrobotics = { git = "https://github.com/TedLentsch/torchrobotics.git", rev = "0ffa2a2510953c82e4cd3333e4449b57897bd390" }
torch-scatter = { url = "https://data.pyg.org/whl/torch-2.4.0%2Bcu124/torch_scatter-2.1.2%2Bpt24cu124-cp310-cp310-linux_x86_64.whl" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.4cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }
terraseg = { workspace = true }
ptv3 = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
