[project]
name = "omnilidar-scripts"
version = "0.1.0"
description = "Standalone Python scripts to convert public autonomous driving datasets into OmniLiDAR format."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "numpy==1.26.4",
    "pyquaternion>=0.9.9",
    "tqdm==4.66.5",
]
