<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>terraseg_ros2</name>
  <version>0.1.0</version>
  <description>
    ROS2 node for online LiDAR ground segmentation with TerraSeg. Subscribes to a
    sensor_msgs/PointCloud2 topic, runs the TerraSeg-B or TerraSeg-S model, and
    publishes a labeled PointCloud2 with an added uint8 'label' field
    (0 = ground, 1 = non-ground).
  </description>

  <maintainer email="t.lentsch@tudelft.nl">Ted Lentsch</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
