[project]
name = "terraseg-scripts"
version = "0.1.0"
description = "TerraSeg project"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "numpy==1.26.4",
    "pillow==11.1.0",
    "scikit-learn>=1.7.2",
    "tabulate>=0.9.0",
    "tensorboard>=2.18.0",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchrobotics",
    "torchvision==0.19.1",
    "tqdm==4.66.5",
    "terraseg-utils",
    "terraseg",
    "ptv3",
]

[tool.uv.sources]
terraseg-utils = { workspace = true }
terraseg = { workspace = true }
ptv3 = { workspace = true }
