[project]
name = "ptv3"
version = "0.1.0"
description = "Vendored Point Transformer v3 (PTv3) backbone, pinned to a specific upstream commit."
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "spconv-cu124==2.3.8",
    "torch-scatter",
    "addict",
    "einops",
    "timm",
    "flash-attn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptv3"]
