[project]
name = "terraseg-utils"
version = "0.1.0"
description = "Shared dataset classes and utilities"
requires-python = "==3.10.*"
dependencies = [
    "torch",
    "numpy",
    "tabulate",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/utils"]
